Modified prompt and created a new table